# Ctraining

./: calculatrice.cpp  main
Calculatrice/: calculatrice.cpp
LibrairyManager/: Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  main.cpp
Notes/: notes.cpp
TaskManager/: CMakeLists.txt
TaskManager/include/: Board.h  DBManager.h  Task.h  commands.h
TaskManager/src/: main.cpp
TaskManager/src/models/: Board.cpp  Task.cpp
TaskManager/src/utils/: DBManager.cpp  commands.cpp
